# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "time_service/time"

##############################fuzztest##########################################
ohos_fuzztest("TimeSetNameFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "../timesetname_fuzzer"

  include_dirs = [
    "./",
    "//base/time/time_service/services",
    "//base/time/time_service/services/dfx/include",
    "//base/time/time_service/services/time/include",
    "//base/time/time_service/utils/native/include",
    "//base/time/time_service/services/ipc/stub",
    "//base/time/time_service/services/ipc/base",
    "//base/time/time_service/interfaces/inner_api/include",
    "//base/time/time_service/services/timer/include",
    "//base/time/time_service/services/time/include/inner_api_include",
  ]

  configs = [ "//base/time/time_service/services:time_service_gen_config" ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "./timesetname_fuzzer.cpp" ]

  deps = [
    "//base/time/time_service/services:time_system_ability_static",
    "//base/time/time_service/interfaces/inner_api:time_client",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [ ":TimeSetNameFuzzTest" ]
}
###############################################################################
