# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/time/time_service/time.gni")

ohos_shared_library("systemtime") {
  include_dirs = [
    "//base/time/time_service/interfaces/innerkits/include",
    "include",
    "//third_party/node/src",
    "//foundation/arkui/napi/interfaces/kits",
  ]

  configs = [ "${time_utils_path}:utils_config" ]

  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [ "src/js_systemtime.cpp" ]

  deps = [
    "${ability_runtime_path}/frameworks/native/ability/native:abilitykit_native",
    "//base/time/time_service/services:time_service",
    "//foundation/arkui/napi/:ace_napi",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:runtime",
    "ability_runtime:wantagent_innerkits",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  subsystem_name = "time"
  part_name = "time_service"
}
